# pyModRev

./: .gitignore  CHANGELOG.md  README.md  asp_helper.py  configuration.py  main.py  observation_management.py  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
asp_rules/: async.lp  complete.lp  steady_state.lp  sync.lp  time_series.lp
examples/boolean_cell_cycle/01/: README  model.lp  output.txt
examples/boolean_cell_cycle/02/: README  model.bnet  model.zginml  output.txt
examples/boolean_cell_cycle/03/: README  model.lp  output.txt
examples/boolean_cell_cycle/04/: README  async.lp  output.txt
examples/boolean_cell_cycle/05/: README  async.lp  model.bnet  model.zginml  output.txt
network/: edge.py  function.py  inconsistency_solution.py  inconsistent_node.py  network.py  node.py  repair_set.py
network/tests/: test_inconsistency_solution.py  test_inconsistent_node.py  test_repair_set.py
parsers/: asp_reader.py  bnet_reader.py  boolean_expression.py  ginml_reader.py  network_parser.py  network_reader.py  parser_asp.py  parser_bnet.py  parser_factory.py  parser_ginml.py  reader_factory.py
repair/: __init__.py  consistency.py  engine.py  function_search.py  repair.py  topology.py
scripts/: run_modrev.sh  run_tests.sh
src/pymodrev/: __main__.py  cli.py  configuration.py
tests/: compare_outputs.py  conftest.py  test_apply_repair.py  test_bnet_parser.py  test_edge.py  test_function.py  test_ginml_reader.py  test_inconsistency_solution.py  test_inconsistent_node.py  test_model_files.py  test_network.py  test_node.py  test_observation_parsers.py  test_repair_set.py
updaters/: async_updater.py  complete_updater.py  steady_state_updater.py  sync_updater.py  time_series_updater.py  updater.py
(+74 files in other folders)
